--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,10 @@
     {
       "name":"Julian Bour",
       "email":"jb@ambimax.de"
+    },
+    {
+      "name": "Tobias Schifftner",
+      "email": "ts@ambimax.de"
     }
   ]
 }
